[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/icons/icon_128_add.svg" type="Texture" id=1]
[ext_resource path="res://assets/icons/icon_128_substract_minus_remove.svg" type="Texture" id=2]
[ext_resource path="res://components/shared/zoom_elements.gd" type="Script" id=3]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=4]

[node name="UIZoomGroup" type="HBoxContainer"]
margin_right = 88.0
margin_bottom = 33.0
custom_constants/separation = 0
script = ExtResource( 3 )

[node name="ButtonUIScaleMinus" parent="." instance=ExtResource( 4 )]
margin_right = 24.0
rect_min_size = Vector2( 24, 20 )
hint_tooltip = "Change UI Scale"
icon_tex = ExtResource( 2 )
icon_margin = 2

[node name="LabelSpacer" type="CenterContainer" parent="."]
margin_left = 24.0
margin_right = 69.0
margin_bottom = 33.0
rect_min_size = Vector2( 45, 0 )

[node name="Control" type="Control" parent="LabelSpacer"]
margin_left = 22.0
margin_top = 16.0
margin_right = 22.0
margin_bottom = 16.0

[node name="Attach" type="Node2D" parent="LabelSpacer/Control"]

[node name="ZoomScaleLabel" type="Label" parent="LabelSpacer/Control/Attach"]
unique_name_in_owner = true
margin_left = -20.0
margin_top = -10.0
margin_right = 20.0
margin_bottom = 10.0
rect_min_size = Vector2( 40, 20 )
rect_pivot_offset = Vector2( 20, 10 )
text = "100%"
align = 1

[node name="ButtonUIScalePlus" parent="." instance=ExtResource( 4 )]
margin_left = 69.0
margin_right = 93.0
rect_min_size = Vector2( 24, 20 )
hint_tooltip = "Change UI Scale"
icon_tex = ExtResource( 1 )
icon_margin = 2

[connection signal="pressed" from="ButtonUIScaleMinus" to="." method="_on_ButtonUIScaleMinus_pressed"]
[connection signal="pressed" from="ButtonUIScalePlus" to="." method="_on_ButtonUIScalePlus_pressed"]
